# omnics-x

./: .gitignore  CHANGELOG.md  CODEBASE_DIAGNOSTIC_REPORT.md  COMPLETION_REPORT_GPU_HALO_BUFFER.md  COMPREHENSIVE_BUG_AUDIT.md  CONTRIBUTING.md  CRITICAL_FAULTS_AUDIT_REPORT.md  Cargo.toml  DEPLOYMENT_READY_CHECKLIST.md  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  ENHANCEMENT_ROADMAP.md  FEATURES.md  GPU.md  GPU_HALO_BUFFER_SYSTEM.md  GPU_INTEGRATION_GUIDE.md  GPU_KERNEL_IMPLEMENTATION_COMPLETE.md  HALO_BUFFER_ALGORITHM.md  IMPLEMENTATION_SUMMARY.md  LIMITATION_REMOVAL_PROGRESS.md  MASTER_BUG_REGISTRY.md  NEW_BUGS_AUDIT_DETAILED.md  NEW_BUG_AUDIT_REPORT.md  PHASE1_IMPLEMENTATION.md  PHASE2_COMPLETION_REPORT.md  PHASE3_ENHANCEMENT_COMPLETION.md  PHASE4_PROGRESS_REPORT.md  PHASE_1_STATUS.md  PROJECT_COMPLETION_REPORT.md  PUSH_SUMMARY.md  README.md  README_OLD_BACKUP.md  ROADMAP_ENHANCEMENTS.md  SECURITY.md  SESSION_SUMMARY.md  SOFT_CLIPPING_FIX_REPORT.md  build_output_kernel.txt  build_release.txt  test_final.txt  test_kernel_final.txt  (+3 more)
.github/: copilot-instructions.md
benches/: alignment_benchmarks.rs  gpu_benchmarks.rs
examples/: bam_format.rs  basic_alignment.rs  gpu_acceleration.rs  gpu_execution_test.rs  neon_alignment.rs  performance_validation.rs  sam_format_output.rs  st_jude_integration.rs
src/: lib.rs
src/alignment/: bam.rs  cigar_gen.rs  cuda_kernels.rs  cuda_kernels_rtc.rs  gpu_dispatcher.rs  gpu_executor.rs  gpu_halo_buffer.rs  gpu_kernels.rs  gpu_memory.rs  gpu_tiling_strategy.rs  hmm_multiformat.rs  hmmer3_parser.rs  kernel_launcher.rs  mod.rs  profile_dp.rs  simd_viterbi.rs  smith_waterman_cuda.rs
src/alignment/kernel/: cuda.rs  hmm_simd.rs  mod.rs  msa_simd.rs  vulkan.rs
src/futures/: cli_file_io.rs  gpu.rs  gpu_jit_compiler.rs  hmm.rs  hmmer3_full_parser.rs  mod.rs  msa.rs  msa_profile_alignment.rs  phylogeny.rs  phylogeny_likelihood.rs  phylogeny_parsimony.rs  st_jude_bridge.rs  streaming_msa.rs
src/scoring/: mod.rs
tests/: gpu_halo_buffer_integration.rs  multiformat_hmm_integration.rs  soft_clipping_validation.rs
