[package]
name = "omics-simd"
version = "0.8.1"
edition = "2021"
authors = ["Raghav Maheshwari <raghavmkota@gmail.com>"]
description = "omicsx: SIMD-accelerated sequence alignment and bioinformatics analysis"
license = "MIT OR Commercial"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
rayon = "1.7"
log = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
# GPU acceleration (optional - only enabled with features)
cudarc = { version = "0.11", optional = true, features = ["std"] }
# hip-sys = { version = "0.1", optional = true }
# ash = { version = "0.37", optional = true }
# gpu-alloc = { version = "0.6", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "alignment_benchmarks"
harness = false

[features]
default = ["simd"]
simd = []
cuda = ["cudarc"]
cuda-full = ["cuda"]
hip = []
vulkan = []
all-gpu = ["cuda", "hip", "vulkan"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
