[package]
name = "omicsx"
version = "1.0.1"
edition = "2021"
authors = ["Raghav Maheshwari <raghavmkota@gmail.com>"]
description = "omicsx: SIMD-accelerated sequence alignment and bioinformatics analysis for petabyte-scale genomic data"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/techusic/omicsx"
homepage = "https://github.com/techusic/omicsx"
documentation = "https://docs.rs/omicsx"
keywords = ["bioinformatics", "simd", "alignment", "genomics", "cuda"]
categories = ["algorithms", "data-structures", "science"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
rayon = "1.7"
log = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
# GPU acceleration (optional - only enabled with features)
cudarc = { version = "0.11", optional = true, features = ["std"] }
regex = "1.12.3"
# hip-sys = { version = "0.1", optional = true }
# ash = { version = "0.37", optional = true }
# gpu-alloc = { version = "0.6", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "alignment_benchmarks"
harness = false

[features]
default = ["simd"]
simd = []
cuda = ["cudarc"]
cuda-full = ["cuda", "cuda-12050"]
cuda-12050 = []
cuda-12040 = []
cuda-12030 = []
cuda-12020 = []
cuda-12010 = []
cuda-12000 = []
cuda-11080 = []
cuda-11070 = []
cuda-11060 = []
cuda-11050 = []
cuda-11040 = []
hip = []
vulkan = []
all-gpu = ["cuda-12050", "hip", "vulkan"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
